# ai-text-detect

./: .gitattributes  .gitignore  Makefile  README.md  config.py  datamodule.py  justfile  module.py  pyproject.toml  sample.ipynb  train.ipynb  trainer.py  utils.py
app/: main.py  requirements.txt
app/static/: script.js
app/templates/: index.html
logs/csv-logs/version_1/: metrics.csv
logs/csv-logs/version_2/: metrics.csv
logs/csv-logs/version_3/: metrics.csv
logs/wandb/: latest-run
logs/wandb/run-20240930_105002-ec8vhylc/: run-ec8vhylc.wandb
logs/wandb/run-20240930_105127-lxjetvuh/: run-lxjetvuh.wandb
logs/wandb/run-20240930_105723-aon0zxch/: run-aon0zxch.wandb
logs/wandb/run-20240930_105859-bj9gdh23/: run-bj9gdh23.wandb
logs/wandb/run-20240930_115442-3g7gr5sq/: run-3g7gr5sq.wandb
logs/wandb/run-20240930_134936-j6f81v3r/: run-j6f81v3r.wandb
logs/wandb/run-20240930_143511-scrrau9e/: run-scrrau9e.wandb
logs/wandb/run-20240930_185046-imjgm0yv/: run-imjgm0yv.wandb
logs/wandb/run-20240930_214854-jhma5drq/: run-jhma5drq.wandb
logs/wandb/run-20240930_215034-pn04vi9t/: run-pn04vi9t.wandb
logs/wandb/run-20240930_220059-vb2r1l5s/: run-vb2r1l5s.wandb
logs/wandb/run-20241001_185247-2obmqtbh/: run-2obmqtbh.wandb
logs/wandb/run-20241001_191238-ta8rtolr/: run-ta8rtolr.wandb
logs/wandb/run-20241001_195603-f1ptd2tk/: run-f1ptd2tk.wandb
logs/wandb/run-20241002_143929-51i75mtz/: run-51i75mtz.wandb
logs/wandb/run-20241002_144827-up6ofd8w/: run-up6ofd8w.wandb
logs/wandb/run-20241002_144914-0ujk6r8m/: run-0ujk6r8m.wandb
(+42 files in other folders)
