[tool.poetry]
name = "ai-text-detect"
version = "0.1.0"
description = ""
authors = ["hrbn <277654+hrbn@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^3.0.0"
jsonargparse = "^4.32.1"
lightning = "^2.4.0"
peft = "^0.12.0"
torchmetrics = "^1.4.2"
transformers = "^4.44.2"
ipywidgets = "^8.1.5"
ipython = "^8.27.0"
torch = "^2.4.1"
requests = "^2.32.3"
pip = "^24.2"
ipykernel = "^6.29.5"
flask = "^3.0.3"
wandb = "^0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
